--- a/static/controller.html
+++ b/static/controller.html
@@ -6,27 +6,28 @@
   </head>
   <body class="FullScreen">
 
-    <div class="Controller">
-      <div class="Controller-row">
+    <div class="Controller Background--blue">
+      <div class="Controller-row Controller-mainRow ">
         <div class="Controller-button" onclick="VERSOMINUS.sendMessageToScreen(VERSOMINUS.actions.left)">
-          Left
+          <img class="Controller-imageLeft" src="/assets/left.png"/>
         </div>
         <div class="Controller-button" onclick="VERSOMINUS.sendMessageToScreen(VERSOMINUS.actions.rotate)">
-          Rotate
+          <span id="js-PlayerName" class="PlayerName"></span>
+          <img class="Controller-imageRotate" src="/assets/rotate.png"/>
         </div>
         <div class="Controller-button" onclick="VERSOMINUS.sendMessageToScreen(VERSOMINUS.actions.right)">
-          Right
+          <img class="Controller-imageRight" src="/assets/right.png"/>
         </div>
       </div>
 
-      <div class="Controller-row">
-        <div class="Controller-button">
+      <div class="Controller-row Controller--rowWithGutters">
+        <div class="Controller-button Background--red">
           Player 1
         </div>
-        <div class="Controller-button">
+        <div class="Controller-button Background--green">
           Player 2
         </div>
-        <div class="Controller-button">
+        <div class="Controller-button Background--yellow">
           Player 3
         </div>
       </div>
