--- a/static/screen.html
+++ b/static/screen.html
@@ -51,14 +51,13 @@
     </style>
   </head>
 
-  <body>
+  <body onload="window.app.init()">
     <!-- build:js phaser.min.js -->
     <script src="phaser.js"></script>
     <!-- /build -->
     <!-- build:js game.min.js -->
     <script src="game.js"></script>
     <!-- /build -->
-    <script>window.app.init()</script>
   </body>
 
 </html>
