--- a/static/controller.html
+++ b/static/controller.html
@@ -9,14 +9,14 @@
     <div class="Controller" id="js-Player">
       <div class="Controller-row Controller-mainRow ">
         <div class="Controller-button" onclick="VERSOMINUS.sendMessageToScreen(VERSOMINUS.actions.left)">
-          <img class="Controller-imageLeft" src="/assets/left.png"/>
+          <img class="Controller-imageLeft" src="http://subvisual.github.io/versominus/assets/left.png"/>
         </div>
         <div class="Controller-button" onclick="VERSOMINUS.sendMessageToScreen(VERSOMINUS.actions.rotate)">
           <span id="js-PlayerName" class="PlayerName"></span>
-          <img class="Controller-imageRotate" src="/assets/rotate.png"/>
+          <img class="Controller-imageRotate" src=http://subvisual.github.io/versominus/assets/rotate.png"/>
         </div>
         <div class="Controller-button" onclick="VERSOMINUS.sendMessageToScreen(VERSOMINUS.actions.right)">
-          <img class="Controller-imageRight" src="/assets/right.png"/>
+          <img class="Controller-imageRight" src="http://subvisual.github.io/versominus/assets/right.png"/>
         </div>
       </div>
 
