--- a/static/controller.html
+++ b/static/controller.html
@@ -13,7 +13,7 @@
         </div>
         <div class="Controller-button" onclick="VERSOMINUS.sendMessageToScreen(VERSOMINUS.actions.rotate)">
           <span id="js-PlayerName" class="PlayerName"></span>
-          <img class="Controller-imageRotate" src=http://subvisual.github.io/versominus/assets/rotate.png"/>
+          <img class="Controller-imageRotate" src="http://subvisual.github.io/versominus/assets/rotate.png"/>
         </div>
         <div class="Controller-button" onclick="VERSOMINUS.sendMessageToScreen(VERSOMINUS.actions.right)">
           <img class="Controller-imageRight" src="http://subvisual.github.io/versominus/assets/right.png"/>
